tests/test54.rael.exp
Error [1:7]: Expected expression after comma in log node
| log 1,
|       ^
